fix alignment issues

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -18,7 +18,7 @@
   font-family: 'avenir';
   max-width: 42vw;
   height: 40px;
-  padding-top: 3px;
+  padding-top: 2px;
   padding-bottom: 2px;
   text-align: center;
 }
